# fx-compass

./: .gitignore  README.md  config.yaml  main.py  pyproject.toml  requirements.txt
.github/workflows/: notify.yml  test.yml
ref/: dev_guide.md
tests/: test_logic.py
